@@ -1,27 +1,28 @@
 package studio.one.platform.ai.web.controller;
 
+import java.util.List;
+import java.util.Objects;
+
+import javax.validation.Valid;
+
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+
 import studio.one.platform.ai.core.embedding.EmbeddingPort;
 import studio.one.platform.ai.core.embedding.EmbeddingRequest;
 import studio.one.platform.ai.core.embedding.EmbeddingResponse;
 import studio.one.platform.ai.web.dto.EmbeddingRequestDto;
 import studio.one.platform.ai.web.dto.EmbeddingResponseDto;
 import studio.one.platform.ai.web.dto.EmbeddingVectorDto;
+import studio.one.platform.constant.PropertyKeys;
 import studio.one.platform.web.dto.ApiResponse;
 
-import javax.validation.Valid;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.stream.Collectors;
-
-@RestController
-@RequestMapping("/api/ai/embedding")
+@RestController 
+@RequestMapping("${" + PropertyKeys.AI.Endpoints.BASE_PATH + ":/api/ai}/embedding")
 @Validated
 public class EmbeddingController {
 
@@ -40,6 +41,6 @@ public class EmbeddingController {
     private List<EmbeddingVectorDto> toEmbeddingVectors(EmbeddingResponse response) {
         return response.vectors().stream()
                 .map(vector -> new EmbeddingVectorDto(vector.referenceId(), List.copyOf(vector.values())))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
